
Thu Sep 23 16:46:10 EST 1999
(Christian)

Ok, groups behave inconsistent if you use them over
multiple desktops and via the titlebar or the menu,
so group effects are limited to the current desktop
for now.


-------------------------------------------------------------------------------

Thu Sep 23 14:40:50 PDT 1999
(KainX)

Woops.  Width and height of 0 doesn't make for a happy pixmap.  Let
E figure it out.  This fixes Eterm's auto mode.

-------------------------------------------------------------------------------

Thu Sep 23 14:52:38 PDT 1999
(Raster)

ok- theres a memeory leak if you use color modifiers in yout theme.. and thus
color modifiers have been disabled - spent too many hours looking for the leak
and cannot find it anywhere.

-------------------------------------------------------------------------------

Thu Sep 23 14:55:59 PDT 1999
(Raster)

and dont save colro modifiers in the user config anymore since they have been 
disabled

-------------------------------------------------------------------------------

Thu Sep 23 14:57:35 PDT 1999
(Raster)

get the end of comment thing right :)

-------------------------------------------------------------------------------

Thu Sep 23 15:34:31 PDT 1999
(KainX)

Did I leave that debugging printf() in there?  Surely not!

-------------------------------------------------------------------------------

Thu Sep 23 15:51:32 PDT 1999
(KainX)

Removed color modifiers from the Ganymede theme and added imageclasses
required for Eterm's "auto" mode.  (Note to Christian:  Mine are just
temporary, for testing only.  Please make real ones as you see fit.)
:-)

-------------------------------------------------------------------------------

Fri Sep 24 10:30:08 PDT 1999
(Raster)

hide tooltips when flippign desktop areas :)

-------------------------------------------------------------------------------

Fri Sep 24 10:58:11 PDT 1999
(Raster)

fix slideout segfault bug problem thingy majigo